# ha-vigil

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  eslint.config.js  hacs.json  jsconfig.json  package-lock.json  package.json  pyproject.toml  release-please-config.json  renovate.json  vigil.example.yaml
.github/workflows/: claude-code-review.yml  claude.yml  commitlint.yaml  gen-types.yaml  hacs-validation.yaml  hassfest.yaml  mypy.yaml  prek.yaml  release.yaml  tests.yaml
custom_components/vigil/: __init__.py  button.py  config_flow.py  const.py  context.py  coordinator.py  diagnostics.py  entity.py  http_api.py  manifest.json  models.py  pipeline.py  selectors.py  sensor.py  storage.py  strings.json
custom_components/vigil/brand/: README.md
custom_components/vigil/detection/: __init__.py  inputs.py  suppression.py
custom_components/vigil/detection/engines/: engine1_config_entry.py  engine2_unavailability.py  (+4 more)
custom_components/vigil/frontend/: globals.d.ts  vigil-api.generated.d.ts  vigil-card.js  vigil-types.d.ts
custom_components/vigil/history/: __init__.py  recorder.py
custom_components/vigil/learning/: __init__.py  interval_learner.py
custom_components/vigil/persistence/: __init__.py  interval_store.py  sqlalchemy_backend.py
custom_components/vigil/reporting/: __init__.py  acknowledgement.py  health.py  notification.py  serialize.py
scripts/: gen_frontend_types.py
tests/: conftest.py  helpers.py  test_architecture.py  test_config_flow.py  test_config_flow_coercion.py  test_connectivity.py  test_coordinator.py  test_coordinator_exclusions.py  test_diagnostics.py  test_e2e.py  test_engine1_config_entry.py  test_engine2_unavailability.py  test_engine3_staleness.py  test_engine4_watch_rules.py  test_engine5_apps.py  test_frontend_card.py  test_ground_truth_scenarios.py  test_health.py  test_http_api.py  test_init.py  test_interval_learner.py  test_interval_store_contract.py  test_models.py  test_notification.py  test_production_scenarios.py  test_recorder_annotation_floor.py  test_recorder_e2e.py  test_recorder_trimmed_floor.py  test_selectors.py  test_sensor.py  test_sqlalchemy_backend.py  test_suppression.py
tests/frontend/: vigil-card.test.js
