[project]
name = "ha-vigil"
version = "0.0.2" # x-release-please-version
description = "Home Assistant integration that watches integration, device, and entity health — surfacing crashed integrations, offline devices, and silently stale sensors through one persistent notification, diagnostic sensors, and a dashboard card."
license = "MIT"
requires-python = ">=3.14.2"
dependencies = []

[dependency-groups]
dev = [
  # Test against the latest stable Home Assistant (2026.7.x).
  # pytest-homeassistant-custom-component pins HA exactly, so uv resolves the
  # plugin release whose pinned HA satisfies this constraint.
  "homeassistant==2026.7.*",
  "pytest-homeassistant-custom-component>=0.13.323",
  "pytest-cov>=5",
  "mypy>=2.1.0",
  # Pin ruff to the same series the pre-commit hook uses (see .pre-commit-config)
  # so `uv run ruff` and the hook enforce identically instead of diverging.
  "ruff==0.15.*",
  # Dev-only: scripts/gen_frontend_types.py introspects the wire TypedDicts into
  # JSON Schema. Not a runtime dependency of the integration (manifest stays []).
  "pydantic>=2.13",
]

[tool.uv]
required-version = "==0.11.*"
# HA's test plugin pulls an older mypy; force a build new enough to parse the
# Python 3.14 parenthesis-optional `except A, B:` (PEP 758) syntax.
override-dependencies = ["mypy>=2.1.0"]

[tool.mypy]
# Both the component and the tests refer to it as custom_components.*, so use
# explicit package bases (not mypy_path) to avoid a dual-module-name clash.
explicit_package_bases = true
namespace_packages = true
strict = true

# The pytest-homeassistant-custom-component test plugin ships no py.typed; HA
# core itself is fully typed, so this is the only relaxation tests need.
[[tool.mypy.overrides]]
module = "pytest_homeassistant_custom_component.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

# Match the pre-commit ruff hook's assumptions so a direct `uv run ruff` agrees
# with it (default rule set kept; this only pins the target version + width).
[tool.ruff]
target-version = "py314"
line-length = 88

[tool.coverage.run]
source = ["custom_components/vigil"]
